--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - POSTGRES_PASSWORD=postgres
     container_name: postgres_db
 
-  #Django Application
+  # Django Application
   app:
     build: .
     volumes:
@@ -30,16 +30,16 @@ services:
     depends_on:
       - db
 
-    #Celery
-    celery:
-      restart: always
-      build:
-        context: .
-      command: celery -A core worker -l INFO
-      volumes:
-        - .:/django
-      container_name: celery
-      depends_on:
-        - db
-        - redis
-        - app
+  # Celery
+  celery:
+    restart: always
+    build:
+      context: .
+    command: celery -A core worker -l DEBUG
+    volumes:
+      - .:/django
+    container_name: celery
+    depends_on:
+      - db
+      - redis
+      - app
