--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-asgiref==3.3.4
-Django==3.2.4
-pytz==2021.1
-sqlparse==0.4.1
-psycopg2==2.8.6
+Django~=3.2.4
+celery~=5.1.0
+sympy~=1.8
+amqp==5.0.6
 redis==3.5.3
-celery==5.1.0
+numpy~=1.20.3
+kiwisolver~=1.3.1
+matplotlib~=3.4.2
+psycopg2-binary==2.8.5
